--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ nav {
 .search {
   display: flex;
   align-items: center;
-  background-color: gray;
+  background-color: white;
   padding: 10px 20px;
   border-radius: 10px;
 }
